src/tests/snapshots/nitrocli__tests__run__nitrocli_unencrypted_set_-h.snap
---
source: src/tests/run.rs
expression: s

---
nitrocli-unencrypted-set 

Changes the configuration of the unencrypted volume on a Nitrokey Storage

USAGE:
    nitrocli unencrypted set [OPTIONS] <type>

ARGS:
    <type>    The mode to change to [possible values: read-write, read-only]

OPTIONS:
    -h, --help
            Print help information

    -m, --model <MODEL>
            Selects the device model to connect to [possible values: librem, pro, storage]

        --no-cache
            Disables the cache for all secrets

        --serial-number <SERIAL_NUMBERS>
            Sets the serial number of the device to connect to. Can be set multiple times to allow
            multiple serial numbers

        --usb-path <USB_PATH>
            Sets the USB path of the device to connect to

    -v, --verbose
            Increases the log level (can be supplied multiple times)


